$Id$

****************************** DRUPAL 5 BRANCH ********************************

June 10, 2008
-------------
#228557 by neclimdul: Added preprocessor code to emulate the preprocessor in Drupal 6 which allows other modules to add to advanced forum. This patch created a new "modules" directory which holds individual includes for each module adding to advforum.
#NONE by Michelle: Backported the refactored theme path related functions including adding a new setting for the icon directory.

June 9, 2008 -- ALPHA 10
------------
#267827 by Michelle: Ripped out the last week of work and am attempting to do this with a query again.
Code cleanup and syncing the branches.

June 6, 2008 -- ALPHA 9
------------
#241982 by Michelle: Fixed install function for filling table so it doesn't give warnings and returns success/failure properly. Since it was filling the table even with the warnings, there's no need to rerun this.
#242527 by Michelle: Re-fixed the problem with views showing blank instead of 0.
Re-added advf-forum-repeat-post.tpl.php which somehow got dropped from cvs.

June 5, 2008
------------
#241982 by Michelle: Added function to .install to fill last post table with initial values.
#241982 by Michelle: Adjusted comment link to account for multiple pages.
#241982 by Michelle: Added icon linked to most recent comment. (Theme changes: advf-forum-submitted.tpl.php, added newest_comment.gif)
#266765 by aMakUzr: Fixed class markup on forum posts.

June 3, 2008
------------
#242527 by Michelle: Initialized view count to 0 so it doesn't show blank when no views of topic.
#208440 by Michelle: Made reference post use forum theme when replying. Also removed links from comment in reply mode. 
#260397 by c-c-m: Added Spanish translation.
#241982 by Michelle: Updated variable list in comments of advf-forum-submitted.tpl.php to account for changes.

June 2, 2008
------------